fix some alignments

--- a/src/components/About/AboutSection/index.module.scss
+++ b/src/components/About/AboutSection/index.module.scss
@@ -12,7 +12,12 @@ $color_dark: #15111e;
 
   @include responsive.device-max('md') {
     padding: 50px 0;
+    .container {
+      padding-left: 16px;
+      padding-right: 16px;
+    }
   }
+  
   h2 {
     font-size: 40px;
     font-weight: 700;
